# tender

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
attic/attempt_01/: CMakeLists.txt
attic/attempt_01/benchmarks/: CMakeLists.txt  rational_bench.cpp
attic/attempt_01/examples/: bac_cab.py  bac_cab_search.py  dot_commutativity.py  pvw_continuum.ipynb  pvw_continuum.py  strip_notebooks.sh
attic/attempt_01/python/: CMakeLists.txt  _tender.cpp  test_tender.py
attic/attempt_01/python/tender/: __init__.py
attic/attempt_01/python/tender/lib/: __init__.py  theorems.py
attic/attempt_01/python/tender/lib/identities/: __init__.py  definitions.py
attic/attempt_01/src/: CMakeLists.txt  derivation.cpp  integral.cpp  match.cpp  polynomial_expr.cpp  simplify.cpp
attic/attempt_01/src/include/tender/: basis.hpp  coord_system.hpp  fwd.hpp  index.hpp  integral.hpp  match.hpp
attic/attempt_01/tests/: CMakeLists.txt  deriv_test.cpp  derivation_test.cpp  index_test.cpp  integral_test.cpp  polynomial_expr_test.cpp  simplify_test.cpp  smoke_test.cpp
attic/attempt_01/vibes/: 000001_tensor-conventions.md  000002_system-design-boundaries.md  000003_architecture-and-tiers.md  000005_io-ergonomics.md  000008_parameters-and-time.md  000009_standard-functions.md  000010_libraries-and-rotation-tensors.md  000012_implementation-plan.md  000014_collect-variation.md  000015_phase13-identity-library.md  000016_rewrite-search.md  000017_phase13.5-identity-derivation.md  000018_phase13.2-index-basis-bridge.md  000019_phase13.6-indexed-sum-notation.md  000020_phase13.7-context-and-structural-indices.md  000021_phase13.8-kronecker-levi-civita.md  000022_phase13.9-non-circular-proofs.md  000023_phase13.91-eps-delta-proof-gaps.md  000024_levi-civita-products-example.md
benchmarks/: CMakeLists.txt  egraph_saturate_bench.cpp  nf_canon_bench.cpp
cmake/: coverage.cmake
doc/: cheatsheet.md
examples/: Makefile  README.md  bac_cab.ipynb  bac_cab.py  bac_cab_search.ipynb  bac_cab_search.py  basis_aware_coordinates.ipynb  basis_aware_coordinates.py  basis_dot_product.ipynb  basis_dot_product.py  cross_identity.ipynb  cross_identity.py  curvilinear_operators.ipynb  curvilinear_operators.py  cyl_equilibrium.ipynb  cyl_equilibrium.py  delta_trace.ipynb  delta_trace.py  dot_commutativity.py  env.sh  eps_delta.ipynb  eps_delta.py  field_operators.py  kronecker_delta.ipynb  kronecker_delta.py  navier_lame.ipynb  navier_lame.py  pvw_continuum.py  strain_compatibility.ipynb  strain_compatibility.py  tensor_expansions.py
python/: CMakeLists.txt  _core.cpp  _tender.cpp  test_tender.py
python/tender/: __init__.py  basis.py  chart.py  derivation.py  operators.py  render.py  workspace.py
python/tender/lib/: __init__.py  theorems.py
python/tender/lib/identities/: __init__.py  definitions.py  epsilon.py  functions.py  identity_tensor.py  vectors.py
python/tests/: test_basis.py  test_chart.py  test_derivation.py  test_operators.py  test_render.py  test_scalar_field.py  test_select.py  test_tender.py  test_workspace.py
src/: CMakeLists.txt  basis.cpp  chart.cpp  coord_system.cpp  derivation.cpp  egraph.cpp  expr.cpp  identities.cpp  identity.cpp  index.cpp  index_space.cpp  integral.cpp  match.cpp  nf.cpp  nf_egraph.cpp  nf_lower.cpp  nf_match.cpp  polynomial.cpp  polynomial_expr.cpp  render.cpp  simplify.cpp  summation.cpp  tensor_order.cpp  tensor_symmetry.cpp
src/include/tender/: basis.hpp  chart.hpp  context.hpp  coord_system.hpp  derivation.hpp  egraph.hpp  expr.hpp  identities.hpp  identity.hpp  index.hpp  index_space.hpp  integral.hpp  match.hpp  name.hpp  nf.hpp  nf_egraph.hpp  nf_lower.hpp  nf_match.hpp  permutation_spec.hpp  polynomial.hpp  rational.hpp  render.hpp  rewrite.hpp  summation.hpp  tender.hpp  tensor_order.hpp  tensor_symmetry.hpp
tests/: CMakeLists.txt  basis_feasibility_test.cpp  basis_test.cpp  chart_test.cpp  context_test.cpp  coord_system_test.cpp  deriv_test.cpp  derivation_test.cpp  egraph_test.cpp  expr_test.cpp  function_test.cpp  identities_test.cpp  identity_test.cpp  index_test.cpp  integral_test.cpp  match_test.cpp  name_test.cpp  nf_egraph_test.cpp  nf_lower_test.cpp  nf_match_test.cpp  nf_render_test.cpp  nf_test.cpp  permutation_spec_test.cpp  polynomial_expr_test.cpp  polynomial_test.cpp  pvw_test.cpp  rational_test.cpp  render_test.cpp  rewrite_test.cpp  scalar_field_test.cpp  simplify_test.cpp  tensor_order_test.cpp  tensor_test.cpp
vibes/: 000001_tensor-conventions.md  000003_architecture-and-tiers.md  000004_pre-coding-decisions.md  000005_io-ergonomics.md  000006_tensor-coordinates.md  000007_identity-library.md  000011_numeric-types-and-engine.md  000012_implementation-plan.md  000013_polynomial-extensions.md  000017_phase13.5-identity-derivation.md  000019_phase13.6-indexed-sum-notation.md  000023_phase13.91-eps-delta-proof-gaps.md  000025_phase13.92-identity-theorem-cleanup.md  000026_expression-grammar.md  000027_names.md  000028_indices.md  000029_subspace-decomposition.md  000030_ast-design.md  000031_tensor-labels-and-symmetry.md  000032_eps-delta-derivation.md  000033_theorems-and-pattern-matching.md  000034_egraph-saturation.md  000035_eps-pair-contraction-and-the-creative-step.md  000036_tensors-coordinates-bases.md  000037_algebraic-normal-form.md  000038_roadmap.md  000039_identity-matcher.md  000040_delta-trace-not-blocked.md  000041_implicit-einstein-summation.md  000042_egraph-core.md  000043_egraph-ematcher.md  000044_egraph-saturate.md  000045_egraph-python-and-benchmark.md  000046_stage2-identity-library-and-cost.md  000047_index-symmetry-and-realm-handling.md  000048_distribution-as-an-egraph-rule.md  000049_vector-bases-and-coordinate-systems.md  000050_theorem-catalog.md  000051_subtree-pattern-variables.md  000052_implicit-summation-through-contractions.md  (+39 more)
vibes/notes/: attempt_02.md  bac-cab.tex  ocr.md
