include(GoogleTest)

function(tender_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE tender::tender GTest::gtest_main)
    if(TENDER_BUILD_COVERAGE)
        tender_enable_coverage(${name})
    endif()
    gtest_discover_tests(${name})
endfunction()

tender_add_test(smoke_test)
tender_add_test(rational_test)
tender_add_test(expr_test)
tender_add_test(index_test)
tender_add_test(tensor_test)
tender_add_test(function_test)
tender_add_test(polynomial_test)
tender_add_test(deriv_test)
tender_add_test(polynomial_expr_test)
tender_add_test(derivation_test)
tender_add_test(identity_test)
