include(GoogleTest)

function(tender_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE tender::tender GTest::gtest_main)
    target_compile_options(${name} PRIVATE -Wall -Wextra -Werror)
    if(TENDER_BUILD_COVERAGE)
        tender_enable_coverage(${name})
    endif()
    gtest_discover_tests(${name})
endfunction()

tender_add_test(rational_test)
tender_add_test(polynomial_test)
tender_add_test(name_test)
tender_add_test(index_test)
tender_add_test(context_test)
