include(GoogleTest)

function(attempt01_add_test name)
    add_executable(${TENDER_A01_PREFIX}${name} ${name}.cpp)
    target_link_libraries(${TENDER_A01_PREFIX}${name}
        PRIVATE attempt01::tender GTest::gtest_main)
    if(TENDER_BUILD_COVERAGE)
        tender_enable_coverage(${TENDER_A01_PREFIX}${name})
    endif()
    gtest_discover_tests(${TENDER_A01_PREFIX}${name})
endfunction()

attempt01_add_test(smoke_test)
attempt01_add_test(rational_test)
attempt01_add_test(expr_test)
attempt01_add_test(index_test)
attempt01_add_test(tensor_test)
attempt01_add_test(function_test)
attempt01_add_test(polynomial_test)
attempt01_add_test(deriv_test)
attempt01_add_test(polynomial_expr_test)
attempt01_add_test(derivation_test)
attempt01_add_test(coord_system_test)
attempt01_add_test(integral_test)
attempt01_add_test(pvw_test)
attempt01_add_test(identity_test)
attempt01_add_test(simplify_test)
attempt01_add_test(match_test)
attempt01_add_test(basis_test)
